# Klangsynthese

./: .gitignore  CMakeLists.txt  README.md
Source/: ATable.h  AudioIO.cpp  AudioIO.h  CQTAdditiveTable.cpp  CQTAdditiveTable.h  CQTTable.cpp  CQTTable.h  CQTTableManager.cpp  CQTTableManager.h  CQTTablePlayer.cpp  CQTTablePlayer.h  ConfigManager.cpp  ConfigManager.h  Entry.cpp  Entry.h  HarmonicTable.cpp  HarmonicTable.h  IProcessor.h  MidiIO.cpp  MidiIO.h  Processor.cpp  Processor.h  TableManager.cpp  TableManager.h  TablePlayer.cpp  TablePlayer.h  VoiceLogic.cpp  VoiceLogic.h  VoiceManager.cpp  VoiceManager.h  VoiceProcessor.cpp  VoiceProcessor.h
Source/Util/: DSPBasics.h  EnvelopeGen.h  FilePath.h  QuickMovingAverage.h  RingBuffer.h  StackBuffer.h
Tables/Flute/: Include.txt
Tables/Glockenspiel/: Include.txt
Tables/Harmonic/Flute/: FL1_LV_na_sus_mp_F3.txt  FL1_LV_na_sus_mp_F4.txt  FL1_LV_na_sus_mp_F5.txt  FL1_LV_na_sus_mp_F6.txt  Include.txt
Tables/Harmonic/Glockenspiel/: Gsp_ME_mf_L-sus_F4.txt  Gsp_ME_mf_L-sus_F5.txt  Gsp_ME_mf_L-sus_F6.txt  Gsp_ME_mf_L-sus_F7.txt  Include.txt
Tables/Harmonic/Marimba/: Include.txt  MA_ES_A-So_f_li_C1.txt  MA_ES_A-So_f_li_C2.txt  MA_ES_A-So_f_li_C3.txt  MA_ES_A-So_f_li_C4.txt  MA_ES_A-So_f_li_C5.txt  MA_ES_A-So_f_li_C6.txt  MA_ES_A-So_f_li_C7.txt
Tables/Harmonic/Rhodes_MK2/: Include.txt  MK2Md20C5.txt  MK2Md20C6.txt  MK2Md20C7.txt
Tables/Harmonic/Violin_pz/: Include.txt  VI-14_pz_mV_mf1_C3.txt  VI-14_pz_mV_mf1_C4.txt  VI-14_pz_mV_mf1_C5.txt  VI-14_pz_mV_mf1_C6.txt
Tables/Harmonic/Violin_sforz/: Include.txt  VI-14_mV_sforz_fp1_A2.txt  VI-14_mV_sforz_fp1_A3.txt  VI-14_mV_sforz_fp1_A4.txt  VI-14_mV_sforz_fp1_A5.txt  VI-14_mV_sforz_fp1_A6.txt
Tables/Marimba/: Include.txt
Tables/Piano/: PianoInclude.txt
Tables/Rhodes_MK2/: Include.txt
Tables/Violin_pz/: VI-14_pz_mV_mf1_C3.txt  VI-14_pz_mV_mf1_C4.txt  VI-14_pz_mV_mf1_C5.txt  VI-14_pz_mV_mf1_C6.txt  VI-14_pz_mV_mf1_C7.txt
Tables/Violin_sforz/: Include.txt
